[package]
name = "feather_core"
version = "0.1.0"
edition = "2021"
authors = ["SAGE Team"]
description = "SAGE Feather Core runtime"
license = "MIT"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
memmap2 = "0.9"
xz2 = "0.1"
pyo3 = { version = "0.22", features = ["auto-initialize", "gil-refs"] }

[features]
profiling = []
